# mslu-schedule-parser

./: .gitignore  Dockerfile  README.md  auth.py  config.py  docker-compose.yml  get_token.py  insert_event.py  main.py  parser.py  pyproject.toml
